resources/css/_fullpage.scss
div#fullpage {
    font-family: sans-serif;
    color: white;
    .section {
        text-align:center;
        overflow: hidden;
        background-size: cover !important;
        .slide {
            .boxedIn {
                color: black;
                position: relative;
                span {
                    position: absolute;
                    left: 0;
                    color: $cta-bg;
                    &.number{
                        color: rgba(106, 142, 169, .6);
                        font-size:  4 * $catchy-subline-size;
                        top: 0;
                        z-index: 5;
                    }
                    &.step-head {
                        color: rgba(106, 142, 169, .3);
                        bottom: 5rem;
                        left: -6rem;
                        font-size: 3.5 * $catchy-subline-size;
                        text-transform: lowercase;
                        -webkit-transform: rotate(-90deg);
                        -moz-transform: rotate(-90deg);
                        -ms-transform: rotate(-90deg);
                        -o-transform: rotate(-90deg);
                    }
                }
            }
        }
    }
    #section0 {
        overflow: hidden;
        .boxedIn {
            position: relative;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            width: 53vh;
            color: $rcgc_blue;
            border-radius: 50%;
            background: white;
            border-right: 0.75rem solid $rcgc_yellow;
            border-left: 0.75rem solid $rcgc_blue;
            border-top: 0.75rem solid $rcgc_blue;
            h1 {
                span{
                    &.jumbo{
                        color: $catchy;
                        font-size: 1.875 * $catchy-subline-size;
                    }
                    &.md-jumbo{
                        color: $catchy-subline;
                        font-size: $catchy-subline-size;
                    }
                }
                margin-bottom: $catchy-subline-size / 2;
            }
            h2{
                color: $catchy-small;
                font-size: $catchy-subline-size / 2.5;
                margin-bottom: $catchy-subline-size / 2;
            }

            .cta{
                color: $cta-text;
                font-size: $catchy-subline-size / 2.15;
                padding: $catchy-subline-size / 1.75;
                border: none;
                border-radius: $catchy-subline-size / 9;
                background: $cta-bg;
                display: flex;
                align-items: center;
                justify-content: center;
            }
        }
        #vidContainer{
            background: rgba(0,47,108,0.6);
            width: 100%;
            height: 100%;
            z-index: 4;
            object-fit: cover;
            position: relative;
        }
        #myVideo{
            position: absolute;
            right: 0;
            bottom: 0;
            top:0;
            right:0;
            width: 100%;
            height: 100%;
            background-size: 100% 100%;
            background-color: black;
            background-position: center center;
            background-size: contain;
            object-fit: cover;
            z-index:3;
        }
    }
    #steps {
        background-image: url(https://ucarecdn.com/e06286fa-87d8-49fc-b3d0-439636e6b058/-/format/auto/-/progressive/yes/-/quality/lightest/);
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        z-index: -3;
        &::before{
            position: absolute;
            content: "";
            height: 100vh;
            width: 100vw;
            top: 0;
            left: 0;
            z-index: -2;
            background: linear-gradient(to bottom, rgba(234,170,0,0.6), rgba(234,170,0,0.6));
        }
    }
    #about {
        background-image: url(https://ucarecdn.com/1cd0a5a5-113d-44a8-8dd0-30a6814d4dfd/-/format/auto/-/progressive/yes/-/quality/lightest/);
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        z-index: -3;
        &::before{
            position: absolute;
            content: "";
            height: 100vh;
            width: 100vw;
            top: 0;
            left: 0;
            z-index: -2;
            background: linear-gradient(to bottom, rgba(0,47,108,0.6), rgba(0,47,108,0.6))
        }
    }
    #testimonials {
        background-image: url(https://ucarecdn.com/f7a55338-ea7b-42c8-9cd5-4bd4d29cf0b9/-/format/auto/-/progressive/yes/-/quality/lightest/);
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        z-index: -3;
        &::before{
            position: absolute;
            content: "";
            height: 100vh;
            width: 100vw;
            top: 0;
            left: 0;
            z-index: -2;
            background: linear-gradient(to bottom, rgba(234,170,0,0.6), rgba(234,170,0,0.6));
        }
    }
    div.layer {
        position: absolute;
        display: flex;
        align-items: center;
        justify-content: center;
        z-index: 4;
        width: 100%;
        -webkit-transform: translate3d(0,0,0);
        -ms-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
    }
    .fp-tableCell {
        display: flex;
        align-items: center;
        justify-content: center;
        .boxedIn {
            border-radius: 2px;
            @include shade(0.125);
            height: 50vh;
            background: rgba(255,255,255,0.9);
            width: 60vw;
            padding: 2rem;                   
        }
    }
}

